k8s/overlays/production/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: material-purchase-api
spec:
  rules:
    - host: "material-purchase-api.notino.app"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: material-purchase-api
                port:
                  name: http
